<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="50dp">

        <TextView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="5dp"
            android:background="#dfdfdf"
            android:text="@string/default_avatar"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>
    


    <TextView
        android:id="@+id/importantIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/cardView1"
        android:background="@drawable/ic_label_important" />

    <TextView
        android:id="@+id/emailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/time"
        android:layout_toEndOf="@id/importantIcon"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/default_name"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/title"
        android:lines="1"
        android:layout_alignParentEnd="true"
        android:text="@string/default_time" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailName"
        android:layout_toStartOf="@id/favoriteIcon"
        android:layout_toEndOf="@id/cardView1"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/default_title" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_toStartOf="@+id/favoriteIcon"
        android:layout_toEndOf="@id/cardView1"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/default_content" />

    <TextView
        android:id="@+id/favoriteIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_star_outline" />


</RelativeLayout>